<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id = "@+id/answer1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/answer2"
        android:layout_margin="5dp"
        android:text="@string/answer_1"/>

    <Button
        android:id = "@+id/answer2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/answer3"
        android:layout_margin="5dp"
        android:text="@string/answer_2"/>

    <Button
        android:id = "@+id/answer3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/answer4"
        android:layout_margin="5dp"
        android:text="@string/answer_3"/>

    <Button
        android:id="@+id/answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:text="@string/answer_4"/>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer1"
        android:gravity="center"
        android:text="@string/question"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/question"
        app:srcCompat="@drawable/logos"
        android:contentDescription="@string/logo" />


</RelativeLayout>